--- a/erp-frontend/package.json
+++ b/erp-frontend/package.json
@@ -15,13 +15,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^9.8.8",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "postcss": "^7.0.39",
+    "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
   }
 }
