--- a/erp-backend/package.json
+++ b/erp-backend/package.json
@@ -1,11 +1,9 @@
 {
   "name": "erp-backend",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +11,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2",
     "pg": "^8.16.3"
   }
 }
