--- a/erp-frontend/package.json
+++ b/erp-frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "autoprefixer": "^10.4.21",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
